--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "maiq-web"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 publish = false
 
@@ -14,3 +14,4 @@ sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] 
 serde = { version = "1.0.151", features = ["serde_derive"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 dotenvy = "0.15.6"
+maiq_parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.1.2" }
