--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.1"
 edition = "2021"
 publish = false
 
-[lib]
-
 [dependencies]
-shuttle-service = { version = "0.8.0", features = ["web-rocket"] }
 thiserror = "1.0.37"
-# maiq_parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.1.0" }
-sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
 serde = { version = "1.0.151", features = ["serde_derive"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 dotenvy = "0.15.6"
-maiq_parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.1.5" }
+maiq_parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.1.7" }
+tracing = { version = "0.1.37", features = ["log"] }
+tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
+tracing-subscriber = "0.3.16"
+mongodb = { version = "2.3.1", features = ["bson-chrono-0_4", "reqwest", "tokio-runtime"] }
+chrono = { version = "0.4.23", features = ["serde"] }
