--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.1"
 edition = "2021"
 publish = false
 
+[profile.release]
+strip = true
+lto = true
+opt-level = "s"
+
 [dependencies]
 thiserror = "1.0.37"
 serde = { version = "1.0.151", features = ["serde_derive"] }
