--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ thiserror = "1.0.37"
 serde = { version = "1.0.151", features = ["serde_derive"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 dotenvy = "0.15.6"
-maiq_parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.3.0" }
-tracing = { version = "0.1.37", features = ["log"] }
+maiq_parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.3.1" }
 tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
-tracing-subscriber = "0.3.16"
 mongodb = { version = "2.3.1", features = ["bson-chrono-0_4", "reqwest", "tokio-runtime"] }
 chrono = { version = "0.4.23", features = ["serde"] }
+lazy_static = "1.4.0"
+log = "0.4.17"
+fern = { version = "0.6.1", features = ["chrono", "colored"] }
+pretty_env_logger = "0.4.0"
