--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ mongodb = { version = "2.3.1", features = ["bson-chrono-0_4", "reqwest", "tokio-
 chrono = { version = "0.4.23", features = ["serde"] }
 lazy_static = "1.4.0"
 log = "0.4.17"
-fern = { version = "0.6.1", features = ["chrono", "colored"] }
 pretty_env_logger = "0.4.0"
+rocket_codegen = "0.4.11"
+async-trait = "0.1.60"
