--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.4"
 edition = "2021"
 publish = false
 
+
 [profile.release]
 strip = true
 lto = true
@@ -21,3 +22,5 @@ chrono = { version = "0.4.23", features = ["serde"] }
 lazy_static = "1.4.0"
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
+openssl = { version = "0.10.45", features = ["vendored"] }
+openssl-sys = { version = "0.9.80", features = ["openssl-src", "vendored"] }
