--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ chrono = { version = "0.4.23", features = ["serde"] }
 lazy_static = "1.4.0"
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
-openssl-sys = { version = "0.9.80" }
+openssl = { version = "0.10.45", features = ["vendored"] }
+openssl-sys = { version = "0.9.80", features = ["openssl-src", "vendored"] }
