--- a/maiq-api-models/Cargo.toml
+++ b/maiq-api-models/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
+log = "0.4.17"
 maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.2.2" }
 serde = { version = "1.0.152", features = ["serde_derive"] }
