--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 mongodb = { version = "2.3.1", features = ["bson-chrono-0_4", "reqwest", "tokio-runtime"] }
 
-maiq-parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.7.1", branch = "dev" }
+maiq-parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.7.1" }
 maiq-api-wrapper = { path = "./maiq-api-wrapper", features = ["comparing"] }
 
 serde = { version = "1.0.152", features = ["serde_derive"] }
