--- a/maiq-api-wrapper/Cargo.toml
+++ b/maiq-api-wrapper/Cargo.toml
@@ -12,7 +12,7 @@ comparing = []
 [dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
 log = "0.4.17"
-maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.3.0", branch = "dev" }
+maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.3.0" }
 serde = { version = "1.0.152", features = ["serde_derive"] }
 
 reqwest = { version = "0.11.14", features = ["json"], optional = true }
