--- a/maiq-api-wrapper/Cargo.toml
+++ b/maiq-api-wrapper/Cargo.toml
@@ -5,15 +5,11 @@ edition = "2021"
 
 [lib]
 
-[features]
-reqwest = ["dep:reqwest", "dep:lazy_static"]
-comparing = []
-
 [dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
 log = "0.4.17"
-maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.3.0" }
+maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", branch = "dev-new-changes-resolving", version = "0.3.0" }
 serde = { version = "1.0.152", features = ["serde_derive"] }
 
-reqwest = { version = "0.11.14", features = ["json"], optional = true }
-lazy_static = { version = "1.4.0", optional = true }
+reqwest = { version = "0.11.14", features = ["json"] }
+lazy_static = { version = "1.4.0" }
