--- a/maiq-api-wrapper/Cargo.toml
+++ b/maiq-api-wrapper/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "maiq-api-wrapper"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 
 [lib]
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
 log = "0.4.17"
-maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.3.0" }
+maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", branch = "tl", version = "0.4.0"  }
 serde = { version = "1.0.152", features = ["serde_derive"] }
 
 reqwest = { version = "0.11.14", features = ["json"] }
